--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rusty-performant-postman"
+name = "performant-smtp-blackhole"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,3 +9,4 @@ edition = "2021"
 native-tls = "0.2.11"
 tokio = { version = "1", features = ["full"] }
 tokio-native-tls = { version = "0.3.1", features = [] }
+futures = "0.3.29"
