--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ native-tls = "0.2.11"
 tokio = { version = "1", features = ["full"] }
 tokio-native-tls = { version = "0.3.1", features = [] }
 futures = "0.3.29"
+log = "0.4.20"
+env_logger = "0.10.1"
